:sparkles:[Feature] Add drawing rectangles feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="buttons-container">
-      <button id="drawButton"></button>
+      <button id="drawButton">draw</button>
       <button id="colorButton"></button>
     </div>
     <div class="canvas-container">
