🐛[Fix] Fixing buttons icons not displayed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
   </head>
   <body>
     <div class="buttons-container">
-      <button id="drawButton">draw</button>
-      <button id="colorButton"></button>
+      <button id="drawButton">
+        <img
+          id="search-icon"
+          class="search-icon"
+          src="./assets/rectangle-plus.svg"
+          alt="Draw Icon"
+        />
+      </button>
+      <button id="colorButton">
+        <img
+          id="search-icon"
+          class="search-icon"
+          src="./assets/color-palette.svg"
+          alt="Draw Icon"
+        />
+      </button>
     </div>
     <div class="canvas-container">
       <canvas id="rectangles" width="800" height="600"></canvas>
