--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
           />
           pour modifier la couleur des deux plus petits réctangles !
         </p>
+        <p>
+          Un double-clic permet de faire tourner les rectangles, mais attention,
+          cela les supprime !
+        </p>
       </div>
     </div>
 
